--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,3 +9,6 @@ spring:
     url: jdbc:mysql://localhost:3306/persons
     user: webflux
     password: WebFlux2024_maciel
+gateways:
+  home-api:
+    base-uri: http://localhost:8081
